--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-     "dev": "concurrently \"pnpm --filter backend dev\" \"vite\"",
+    "dev": "concurrently \"pnpm --filter backend dev\" \"vite\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,6 +15,7 @@
     "fdir": "^6.4.4",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
+    "nodemon": "^3.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
