--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://user1:mongoDB6520242@cluster0.wkner.mongodb.net/next-mango?retryWrites=true&w=majority
 PORT=5000
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5000/api
