--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node backend/index.js",
     "dev": "concurrently \"pnpm --filter backend dev\" \"vite\"",
     "build": "vite build",
     "lint": "eslint .",
