--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fdir": "^6.4.4",
+    "lucide-react": "^0.509.0",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
     "nodemon": "^3.1.10",
