--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
+# MongoDB connection string
 MONGO_URI=mongodb+srv://user1:mongoDB6520242@cluster0.wkner.mongodb.net/Cherry_Myo_Restaurant
+
+# Backend server port
 PORT=5000
-VITE_API_URL=https://cherry-myo-restaurant-ordering-system.onrender.com/api
+
+# Frontend API base URL
+# VITE_API_URL=https://cherry-myo-restaurant-ordering-system.onrender.com/api
+VITE_API_URL=http://localhost:5000/api
+# Frontend WebSocket connection for real-time updates
+VITE_SOCKET_URL=http://localhost:5000
