--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "nodemon": "^3.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tinyglobby": "^0.2.13"
