--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.509.0",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
+    "node-cron": "^4.2.0",
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
