--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fdir": "^6.4.4",
+    "firebase": "^12.1.0",
     "lucide-react": "^0.509.0",
     "mongoose": "^8.14.1",
     "nanoid": "^5.1.5",
