--- a/package.json
+++ b/package.json
@@ -17,18 +17,23 @@
     "express": "^5.1.0",
     "fdir": "^6.4.4",
     "firebase": "^12.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.509.0",
     "mongoose": "^8.14.1",
     "nanoid": "^5.1.5",
     "next": "^15.3.1",
     "node-cron": "^4.2.0",
     "nodemon": "^3.1.10",
+    "prop-types": "^15.8.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
+    "recharts": "^3.1.2",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
