--- a/backend/package.json
+++ b/backend/package.json
@@ -25,5 +25,9 @@
   "devDependencies": {
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.10"
-  }
+  },
+  "engines": {
+  "node": ">=18.17.1"
+}
+
 }
