--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
+    "multer": "^2.0.2",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
@@ -27,7 +28,6 @@
     "nodemon": "^3.1.10"
   },
   "engines": {
-  "node": ">=18.17.1"
-}
-
+    "node": ">=18.17.1"
+  }
 }
