--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.509.0",
     "mongoose": "^8.14.1",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "next": "^15.3.1",
     "node-cron": "^4.2.0",
