--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "packageManager": "pnpm@8.15.4",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
