--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.23.0",
     "tinyglobby": "^0.2.13"
   },
   "devDependencies": {
