--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
     "multer": "^2.0.2",
+    "nanoid": "^5.1.6",
+    "promptpay-qr": "0.5.0",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
