--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "promptpay-qr": "0.5.0",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
