--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "fdir": "^6.4.4",
     "firebase": "^12.1.0",
+    "framer-motion": "^12.23.24",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.509.0",
