--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "mongoose": "^8.14.1",
+    "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
+    "jwt-decode": "^4.0.0",
+    "mongoose": "^8.19.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "promptpay-qr": "0.5.0",
