--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^8.0.0",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
@@ -23,6 +24,7 @@
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.509.0",
     "mongoose": "^8.14.1",
     "multer": "^2.0.2",
