--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fdir": "^6.4.4",
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
